common/oidc-client/oauth2-proxy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      volumes:
        - name: configmain
          configMap:
            name: oauth2-proxy
            defaultMode: 420
        - name: oauth2-proxy
          secret:
            secretName: oauth2-proxy
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
          args:
            - --http-address=0.0.0.0:4180
            - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
          ports:
            - name: http
              containerPort: 4180
              protocol: TCP
            - name: metrics
              containerPort: 44180
              protocol: TCP
          volumeMounts:
            - name: configmain
              mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
              subPath: oauth2_proxy.cfg
            - name: oauth2-proxy
              subPath: CLIENT_SECRET
              mountPath: "/etc/oauth2_proxy/CLIENT_SECRET"
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
          resources: {}
