common/oidc-client/oauth2-proxy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oauth2-proxy
  ports:
    - port: 8080
      name: http-authservice
      targetPort: http-api
  publishNotReadyAddresses: true
